Fix wrapping in tags box

--- a/client/app/styles/components/_card.styl
+++ b/client/app/styles/components/_card.styl
@@ -92,9 +92,12 @@
     // tags select dropdown
     .tags
 
-        [aria-haspopup=true] li
-            margin 0
-            white-space nowrap
+        [aria-haspopup=true]
+            dd
+                white-space nowrap
+
+            li
+                margin 0
 
         button
             width auto
